# termui

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: bench.yml  coverage.yml  release.yml  tests_and_checks.yml
benches/: a_benchmark.rs
examples/: simple.rs
src/: context.rs  error.rs  geom.rs  handler.rs  lib.rs  main.rs  point.rs
src/element/: attribute.rs  elements.rs  macro.rs  mod.rs
src/reactive/: mod.rs  state.rs
src/style/: color.rs  mod.rs  property.rs
src/stylesheet/: macro.rs  mod.rs  selector.rs
src/test_utils/: rvg.rs
tests/: integration_test.rs
