[package]
name = "termui"
version = "0.1.0"
description = ""
keywords = []
categories = []

include = ["/src", "/benches", "README.md", "LICENSE"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/termui"
repository = "https://github.com/appcypher/termui"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[[bin]]
name = "termui"
path = "src/main.rs"
doc = false
bench = false

[[bench]]
name = "a_benchmark"
harness = false
required-features = ["test_utils"]

[dependencies]
anyhow = "1.0"
proptest = { version = "1.1", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.4"
proptest = "1.1"

[features]
default = []
test_utils = ["proptest"]

[metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
#
# See https://doc.rust-lang.org/cargo/reference/profiles.html for more info.
# [profile.release]
# Do not perform backtrace for panic on release builds.
## panic = 'abort'
# Perform optimizations on all codegen units.
## codegen-units = 1
# Tell `rustc` to optimize for small code size.
## opt-level = "s" # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
## lto = true
# Amount of debug information.
# 0/false: no debug info at all; 1: line tables only; 2/true: full debug info
## debug = false
# Strip debug symbols
## strip = "symbols"

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
