[package]
name = "termui"
version = "0.1.0"
description = "A terminal user interface library for the lazy"
keywords = []
categories = []

include = ["/src", "/benches", "README.md", "LICENSE"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/termui"
repository = "https://github.com/appcypher/termui"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[[bin]]
name = "termui"
path = "src/main.rs"
doc = false
bench = false

[dependencies]
anyhow = "1.0"
crossterm = "0.26"
proptest = { version = "1.1", optional = true }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-segmentation = "1.10"

[dev-dependencies]
criterion = "0.4"
proptest = "1.1"

[features]
default = []
test_utils = ["proptest"]

[metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
